--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "关于"
-description: "Hey, this is Hux."
+description: "I am FishYan, Just Do Myself"
 header-img: "img/about-bg.jpg"
 ---
 
