--- a/private.html
+++ b/private.html
@@ -1,13 +1,6 @@
----
-layout:     keynote
-title:      "个人简历"
-subtitle:   "iOS开发工程师-薛焱"
-date:       2016-12-25 22:00:00
-author:     "FishYan"
-header-img: "img/blog-header.png"
-tags:
-    
----
+
+<html>
+<body style="background-color:PowderBlue;">
 
 <table border="1">
 <tr>
@@ -26,3 +19,6 @@ tags:
   <td>3年</td>
 </tr>
 </table>
+
+</body>
+</html>
