--- a/private.html
+++ b/private.html
@@ -1,4 +1,11 @@
 
+---
+title: 标签
+layout: default
+description: keep hungry keep foolish
+header-img: "img/tag-bg.jpg"
+---
+
 <html>
 <body style="background-color:PowderBlue;">
 
