--- a/private.html
+++ b/private.html
@@ -1,8 +1,8 @@
 
 ---
-title: 标签
+title: 个人简历
 layout: default
-description: keep hungry keep foolish
+description: iOS开发工程师-薛焱
 header-img: "img/tag-bg.jpg"
 ---
 
