--- a/private.html
+++ b/private.html
@@ -19,8 +19,21 @@ header-img: "img/tag-bg.jpg"
     </div>
 </header>
 
-<html>
-<body style="background-color:white;">
+<!-- Main Content -->
+<div class="container">
+	<div class="row">
+		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+
+
+
+
+            <!-- 标签云 -->
+			<div id='tag_cloud' class="tags">
+				{% for tag in site.tags %}
+				<a href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
+				{% endfor %}
+			</div>
 
 <table border="1">
 <tr>
@@ -39,6 +52,11 @@ header-img: "img/tag-bg.jpg"
   <td>3年</td>
 </tr>
 </table>
+      
 
-</body>
-</html>
+			</div>
+			{% endfor %}
+
+		</div>
+	</div>
+</div>
