--- a/private.html
+++ b/private.html
@@ -23,18 +23,7 @@ header-img: "img/tag-bg.jpg"
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-
-
-
-
-
-            <!-- 标签云 -->
-			<div id='tag_cloud' class="tags">
-				{% for tag in site.tags %}
-				<a href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
-				{% endfor %}
-			</div>
-<table border="1">
+      <table border="1" width="400">
 <tr>
   <th rowspan=3><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
   <td><p style="font-size:20px">薛焱<p></td>
@@ -51,9 +40,6 @@ header-img: "img/tag-bg.jpg"
   <td>3年</td>
 </tr>
 </table>
-      
-
 		</div>
 	</div>
 </div>
-
