--- a/private.html
+++ b/private.html
@@ -23,9 +23,9 @@ header-img: "img/tag-bg.jpg"
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <table border="1" width="400">
+      <table border="1" width="500">
 <tr>
-  <th rowspan=3><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
+  <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
   <td><p style="font-size:20px">薛焱<p></td>
   <td colspan=3>男</td>
 </tr>   
