--- a/private.html
+++ b/private.html
@@ -23,10 +23,12 @@ header-img: "img/tag-bg.jpg"
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+<h3>个人信息</h3>
       <table border="1" width="500">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
-  <td><p style="font-size:20px">薛焱<p></td>
+  <td>薛焱</td>
   <td colspan=3>男</td>
 </tr>   
 <tr>
@@ -40,6 +42,21 @@ header-img: "img/tag-bg.jpg"
   <td>3年</td>
 </tr>
 </table>
+
+<h3>基本资料</h3>
+
+<h3>职业意向</h3>
+
+<h3>工作经历</h3>
+
+<h3>教育经历</h3>
+
+<h3>教育经历</h3>
+
+<h3>自我评价</h3>
+
+<h3>附加信息</h3>
+
 		</div>
 	</div>
 </div>
