--- a/private.html
+++ b/private.html
@@ -25,7 +25,7 @@ header-img: "img/tag-bg.jpg"
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 <h3>个人信息</h3>
-      <table border="1" width="500">
+      <table border="1">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
   <td>薛焱</td>
