--- a/private.html
+++ b/private.html
@@ -28,7 +28,7 @@ header-img: "img/tag-bg.jpg"
       <table border="1">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
-  <td>薛焱</td>
+  <td width="100">薛焱</td>
   <td colspan=3>男</td>
 </tr>   
 <tr>
