--- a/private.html
+++ b/private.html
@@ -25,7 +25,7 @@ header-img: "img/tag-bg.jpg"
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 <h3>个人信息</h3>
-      <table border="1">
+      <table border="1" bgcolor="#f0f0f0">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
   <td width="100">薛焱</td>
@@ -38,13 +38,27 @@ header-img: "img/tag-bg.jpg"
 <tr>
   <td>目前职位：</td>
   <td>iOS开发工程师</td>
-  <td>工作年限：</td>
+  <td width="100">工作年限：</td>
   <td>3年</td>
 </tr>
 </table>
 
 <h3>基本资料</h3>
+      <table border="1">
+<tr>
+  <th width="100">年龄：</td>
+  <td >26</td>
+  <td width="100">邮箱：</td>
+  <td >xueyan_2011@163.com</td>
+</tr>   
+<tr>
+  <td>手机：</td>
+  <td >13627275116</td>
+  <td>所在地点：</td>
+  <td>武汉市-硚口区</td>
+</tr>
 
+</table>
 <h3>职业意向</h3>
 
 <h3>工作经历</h3>
