--- a/private.html
+++ b/private.html
@@ -51,7 +51,7 @@ header-img: "img/tag-bg.jpg"
   <th width="100">年龄：</td>
   <td >26</td>
   <td width="100">邮箱：</td>
-  <td ><a href="mailto:xueyan_2011@163.com" style="color:blue">xueyan_2011@163.com</a></td>
+  <td ><a href="mailto:xueyan_2011@163.com" style="color:blue"><u>xueyan_2011@163.com</u></a></td>
 </tr>   
 <tr>
   <td>手机：</td>
