--- a/private.html
+++ b/private.html
@@ -26,7 +26,7 @@ header-img: "img/tag-bg.jpg"
 
 <h3>个人信息</h3>
 
-<table border="1" bgcolor="#f0f0f0">
+<table border="1" style="color:#F9F9F9">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
   <td width="100">薛焱</td>
@@ -51,7 +51,7 @@ header-img: "img/tag-bg.jpg"
   <th width="100">年龄：</td>
   <td >26</td>
   <td width="100">邮箱：</td>
-  <td ><a href="mailto:xueyan_2011@163.com" style="color:blue"><u>xueyan_2011@163.com</u></a></td>
+  <td ><a href="mailto:xueyan_2011@163.com" style="color:#114A5B"><u>xueyan_2011@163.com</u></a></td>
 </tr>   
 <tr>
   <td>手机：</td>
