--- a/private.html
+++ b/private.html
@@ -26,7 +26,7 @@ header-img: "img/tag-bg.jpg"
 
 <h3>个人信息</h3>
 
-<table border="1" style="color:#F9F9F9">
+<table border="1" style="bgcolor:#F9F9F9">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
   <td width="100">薛焱</td>
