--- a/private.html
+++ b/private.html
@@ -26,7 +26,7 @@ header-img: "img/tag-bg.jpg"
 
 <h3>个人信息</h3>
 
-<table border="1" style="bgcolor:#F9F9F9">
+<table border="1" bgcolor="#F9F9F9">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
   <td width="100">薛焱</td>
@@ -51,7 +51,7 @@ header-img: "img/tag-bg.jpg"
   <th width="100">年龄：</td>
   <td >26</td>
   <td width="100">邮箱：</td>
-  <td ><a href="mailto:xueyan_2011@163.com" style="color:#114A5B"><u>xueyan_2011@163.com</u></a></td>
+  <td ><a onmouseover="mover(this)" href="mailto:xueyan_2011@163.com" style="color:#6C92B7"><u>xueyan_2011@163.com</u></a></td>
 </tr>   
 <tr>
   <td>手机：</td>
@@ -62,7 +62,12 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>职业意向</h3>
-
+<table border="1">
+<tr>
+  <th width="100">年龄：</td>
+  <td >26</td>
+</tr>   
+</table>
 <h3>工作经历</h3>
 
 <h3>教育经历</h3>
@@ -76,3 +81,16 @@ header-img: "img/tag-bg.jpg"
 		</div>
 	</div>
 </div>
+
+
+<script>
+function mover(obj)
+{
+obj.style.color="red"
+}
+
+function mOut(obj)
+{
+obj.style
+}
+</script>
