--- a/private.html
+++ b/private.html
@@ -64,11 +64,25 @@ header-img: "img/tag-bg.jpg"
 <h3>职业意向</h3>
 <table border="1">
 <tr>
-  <th width="100">年龄：</td>
-  <td >26</td>
+  <th width="100">期望职位：</td>
+  <td >iOS开发工程师</td>
 </tr>   
 </table>
 <h3>工作经历</h3>
+ <table border="0">
+   <tr>
+     <td width="10"></td>
+     <td colspan="2">2015.08-至今</td>
+     <td>重庆车杰盟科技有限公司</td>
+     <td></td>
+   </tr>
+ <tr>
+     <td width="10"></td>
+     <td>2015.08-至今</td>
+     <td>公司描述：</td>
+     <td>2011年6月30日，由全国18家一线代理商、服务商联合组建“中国汽车服务连锁运营杰出联盟”和“中国汽车服务网络连锁杰出联盟”，简称“车杰盟”</td>
+   </tr>
+ </table>
 
 <h3>教育经历</h3>
 
