--- a/private.html
+++ b/private.html
@@ -70,7 +70,7 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>工作经历</h3>
- <table border="0">
+ <table>
    <tr>
      <td width="10"></td>
      <td colspan="2">2015.08-至今</td>
