--- a/private.html
+++ b/private.html
@@ -29,17 +29,17 @@ header-img: "img/tag-bg.jpg"
 <table border="1" bgcolor="#F9F9F9">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
-  <td width="100">薛焱</td>
+  <th width="100">薛焱</td>
   <td colspan=3>男</td>
 </tr>   
 <tr>
-  <td>目前公司：</td>
+  <th>目前公司：</td>
   <td colspan=3>重庆车杰盟科技有限公司 </td>
 </tr>
 <tr>
-  <td>目前职位：</td>
+  <th>目前职位：</td>
   <td>iOS开发工程师</td>
-  <td width="100">工作年限：</td>
+  <th width="100">工作年限：</td>
   <td>3年</td>
 </tr>
 </table>
@@ -49,14 +49,14 @@ header-img: "img/tag-bg.jpg"
 <table border="1">
 <tr>
   <th width="100">年龄：</td>
-  <td >26</td>
-  <td width="100">邮箱：</td>
+  <td >26岁</td>
+  <th width="100">邮箱：</td>
   <td ><a onmouseover="mOver(this)" onmouseout="mOut(this)" href="mailto:xueyan_2011@163.com" style="color:#4271AE">xueyan_2011@163.com</a></td>
 </tr>   
 <tr>
-  <td>手机：</td>
+  <th>手机：</td>
   <td >13627275116</td>
-  <td>所在地点：</td>
+  <th>所在地点：</td>
   <td>武汉市-硚口区</td>
 </tr>
 </table>
