--- a/private.html
+++ b/private.html
@@ -62,7 +62,7 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>职业意向</h3>
-<table border="1">
+<table>
 <tr>
   <th width="100">期望职位：</td>
   <td >iOS开发工程师</td>
@@ -75,7 +75,6 @@ header-img: "img/tag-bg.jpg"
      <td width="10"></td>
      <td colspan="2">2015.08-至今</td>
      <td>重庆车杰盟科技有限公司</td>
-     <td></td>
    </tr>
  <tr>
      <td width="10"></td>
