--- a/private.html
+++ b/private.html
@@ -62,7 +62,7 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>职业意向</h3>
-<table>
+<table bordercolor="clear">
 <tr>
   <th width="100">期望职位：</td>
   <td >iOS开发工程师</td>
@@ -72,8 +72,8 @@ header-img: "img/tag-bg.jpg"
 <h3>工作经历</h3>
  <table>
    <tr>
-     <td width="10"></td>
-     <td colspan="2">2015.08-至今</td>
+     <td width="2" bgcolor="#FD9827"></td>
+     <td colspan="2" width="150">2015.08-至今</td>
      <td>重庆车杰盟科技有限公司</td>
    </tr>
  <tr>
