--- a/private.html
+++ b/private.html
@@ -70,7 +70,7 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>工作经历</h3>
- <table>
+ <table rules=none>
    <tr>
      <td width="2" bgcolor="#FD9827"></td>
      <td colspan="2" width="150">2015.08-至今</td>
