--- a/private.html
+++ b/private.html
@@ -62,7 +62,7 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>职业意向</h3>
-<table bordercolor="white">
+<table bordercolor="white" rules="none">
 <tr>
   <th width="100">期望职位：</td>
   <td >iOS开发工程师</td>
