--- a/private.html
+++ b/private.html
@@ -62,9 +62,9 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>职业意向</h3>
-<table bordercolor="white" rules="none">
+<table bordercolor="white">
 <tr>
-  <th width="100">期望职位：</td>
+  <th bordercolor="white" width="100">期望职位：</td>
   <td >iOS开发工程师</td>
 </tr>   
 </table>
