--- a/private.html
+++ b/private.html
@@ -65,7 +65,7 @@ header-img: "img/tag-bg.jpg"
 <table bordercolor="white">
 <tr>
   <th bordercolor="white" width="100">期望职位：</td>
-  <td >iOS开发工程师</td>
+  <td bordercolor="white">iOS开发工程师</td>
 </tr>   
 </table>
 
