--- a/private.html
+++ b/private.html
@@ -62,15 +62,15 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>职业意向</h3>
-<table bordercolor="white">
+<table>
 <tr>
-  <th bordercolor="white" width="100">期望职位：</td>
-  <td bordercolor="white">iOS开发工程师</td>
+  <th width="100">期望职位：</td>
+  <td>iOS开发工程师</td>
 </tr>   
 </table>
 
 <h3>工作经历</h3>
- <table rules=none>
+ <table>
    <tr>
      <td width="2" bgcolor="#FD9827"></td>
      <td colspan="2" width="150">2015.08-至今</td>
