--- a/private.html
+++ b/private.html
@@ -70,9 +70,9 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>工作经历</h3>
- <table>
+ <table bordercolor="white">
    <tr>
-     <td><canvas style="background:#FD9827" width="2"></td>
+     <td bgcolor="#F2F2F2"><canvas style="background:#FD9827" width="5" height="40"></td>
      <td colspan="2" width="250">2015.08-至今</td>
      <td>重庆车杰盟科技有限公司</td>
    </tr>
