--- a/private.html
+++ b/private.html
@@ -72,8 +72,8 @@ header-img: "img/tag-bg.jpg"
 <h3>工作经历</h3>
  <table bordercolor="white">
    <tr>
-     <td bgcolor="#F2F2F2"><canvas style="background:#EEEEEE" width="5" height="20"></td>
-     <td colspan="2" width="250">2015.08-至今</td>
+     <td bordercolor="white" bgcolor="#EEEEEE"><canvas style="background:#FD9827" width="5" height="20"></td>
+     <td bordercolor="white" colspan="2" width="250">2015.08-至今</td>
      <td bordercolor="white">重庆车杰盟科技有限公司</td>
    </tr>
  <tr>
