--- a/private.html
+++ b/private.html
@@ -72,9 +72,9 @@ header-img: "img/tag-bg.jpg"
 <h3>工作经历</h3>
  <table bordercolor="white">
    <tr>
-     <td bordercolor="white" bgcolor="#EEEEEE"><canvas style="background:#FD9827" width="5" height="20"></td>
-     <td bordercolor="white" colspan="2" width="250">2015.08-至今</td>
-     <td bordercolor="white">重庆车杰盟科技有限公司</td>
+     <td border="0" bgcolor="#EEEEEE"><canvas style="background:#FD9827" width="5" height="20"></td>
+     <td border="0" colspan="2" width="250">2015.08-至今</td>
+     <td border="0">重庆车杰盟科技有限公司</td>
    </tr>
  <tr>
      <td width="10"></td>
