--- a/private.html
+++ b/private.html
@@ -29,17 +29,17 @@ header-img: "img/tag-bg.jpg"
 <table border="1" bgcolor="#F9F9F9">
 <tr>
   <th rowspan=3 width="130"><img src="https://github.com/fish-yan/fish-yan.github.io/blob/master/img/myself.jpg?raw=true"/></td>
-  <th width="100">薛焱</td>
+  <th width="100">薛焱</th>
   <td colspan=3>男</td>
 </tr>   
 <tr>
-  <th>目前公司：</td>
+  <th>目前公司：</th>
   <td colspan=3>重庆车杰盟科技有限公司 </td>
 </tr>
 <tr>
-  <th>目前职位：</td>
+  <th>目前职位：</th>
   <td>iOS开发工程师</td>
-  <th width="100">工作年限：</td>
+  <th width="100">工作年限：</th>
   <td>3年</td>
 </tr>
 </table>
@@ -48,15 +48,15 @@ header-img: "img/tag-bg.jpg"
 
 <table border="1">
 <tr>
-  <th width="100">年龄：</td>
+  <th width="100">年龄：</th>
   <td >26岁</td>
-  <th width="100">邮箱：</td>
+  <th width="100">邮箱：</th>
   <td ><a onmouseover="mOver(this)" onmouseout="mOut(this)" href="mailto:xueyan_2011@163.com" style="color:#4271AE">xueyan_2011@163.com</a></td>
 </tr>   
 <tr>
-  <th>手机：</td>
+  <th>手机：</th>
   <td >13627275116</td>
-  <th>所在地点：</td>
+  <th>所在地点：</th>
   <td>武汉市-硚口区</td>
 </tr>
 </table>
@@ -70,15 +70,29 @@ header-img: "img/tag-bg.jpg"
 </table>
 
 <h3>工作经历</h3>
- <table bordercolor="white">
-   <tr>
-     <td border=0px bgcolor="#EEEEEE"><canvas style="background:#FD9827" width="5" height="20"></td>
-     <td border=0px colspan="2" width="250">2015.08-至今</td>
-     <td border=0px>重庆车杰盟科技有限公司</td>
+ <table>
+   <tr bgcolor="#EEEEEE">
+     <td><canvas style="background:#FD9827" width="5" height="20"></td>
+     <td colspan="2" width="250">2015.08-至今</td>
+     <td>重庆车杰盟科技有限公司</td>
    </tr>
  <tr>
-     <td width="10"></td>
-     <td></td>
+     <td colspan="2" width="10"></td>
+     <td>公司描述：</td>
+     <td>2011年6月30日，由全国18家一线代理商、服务商联合组建“中国汽车服务连锁运营杰出联盟”和“中国汽车服务网络连锁杰出联盟”，简称“车杰盟”</td>
+   </tr>
+   <tr bgcolor="#EEEEEE">
+     <td colspan="2" width="10"></td>
+     <th>iOS开发工程师</th>
+     <td align="right">2015.08-至今</td>
+   </tr>
+   <tr>
+     <td colspan="2" width="10"></td>
+     <td>公司描述：</td>
+     <td>2011年6月30日，由全国18家一线代理商、服务商联合组建“中国汽车服务连锁运营杰出联盟”和“中国汽车服务网络连锁杰出联盟”，简称“车杰盟”</td>
+   </tr>
+   <tr>
+     <td colspan="2" width="10"></td>
      <td>公司描述：</td>
      <td>2011年6月30日，由全国18家一线代理商、服务商联合组建“中国汽车服务连锁运营杰出联盟”和“中国汽车服务网络连锁杰出联盟”，简称“车杰盟”</td>
    </tr>
