--- a/private.html
+++ b/private.html
@@ -76,25 +76,26 @@ header-img: "img/tag-bg.jpg"
      <td colspan="2" width="250">2015.08-至今</td>
      <td>重庆车杰盟科技有限公司</td>
    </tr>
- <tr>
-     <td colspan="2" width="10"></td>
+   <tr>
+     <td colspan="2" rowspan="4" width="10"></td>
      <td>公司描述：</td>
      <td>2011年6月30日，由全国18家一线代理商、服务商联合组建“中国汽车服务连锁运营杰出联盟”和“中国汽车服务网络连锁杰出联盟”，简称“车杰盟”</td>
    </tr>
    <tr bgcolor="#EEEEEE">
-     <td colspan="2" width="10"></td>
      <th>iOS开发工程师</th>
      <td align="right">2015.08-至今</td>
    </tr>
    <tr>
-     <td colspan="2" width="10"></td>
-     <td>公司描述：</td>
-     <td>2011年6月30日，由全国18家一线代理商、服务商联合组建“中国汽车服务连锁运营杰出联盟”和“中国汽车服务网络连锁杰出联盟”，简称“车杰盟”</td>
+     <td>工作地点：</td>
+     <td>武汉</td>
    </tr>
    <tr>
-     <td colspan="2" width="10"></td>
-     <td>公司描述：</td>
-     <td>2011年6月30日，由全国18家一线代理商、服务商联合组建“中国汽车服务连锁运营杰出联盟”和“中国汽车服务网络连锁杰出联盟”，简称“车杰盟”</td>
+     <td>职责业绩：</td>
+     <td>1.车赢家导购研发，版本升级迭代（已发21个版本）。<br>
+2.超级车赢家（公司大型平台级APP）研发，版本升级迭代（已发9个版本）。<br>
+3.车杰盟移动互联研发（公司内部OA）。<br>
+4.车杰盟荟购买家版开发（团队项目），（已发10个版本）。<br>
+5.进行项目需求分析，业务流程规划，参与项目原型设计，产品研发，撰写技术文档。</td>
    </tr>
  </table>
 
