--- a/private.html
+++ b/private.html
@@ -123,11 +123,61 @@ header-img: "img/tag-bg.jpg"
 <table>
   <tr>
     <td>河南工业大学（ 2011.09 - 2015.06 ）</td>
-    <td align="right">本科</td>
+    <td>本科</td>
   </tr>
 </table>
 
-<h3>教育经历</h3>
+<h3>项目经历</h3>
+<table>
+  <tr bgcolor="#EEEEEE">
+    <th>超级车赢家（公司平台级APP）</th>
+    <td>2016.03-至今</td>
+  </tr>
+  <tr>
+    <td>项目职务：</td>
+    <td>iOS开发工程师</td>
+  </tr>
+  <tr>
+    <td>项目描述：</td>
+    <td>超级车赢家是车杰盟研发的，针对门店内部管理运营的系统。<br>
+超级车赢家采用模块化设计，各功能灵活配置，终端门店可以根据自身具体情况，匹配相应的店面管理运营解决方案；</td>
+  </tr>
+  <tr>
+    <td>项目职责：</td>
+    <td>1.初期参与项目规划，及可行性研究，需求分析，参与撰写希求文档，原型设计。<br>
+2.负责项目开发和发布，版本升级迭代与维护。<br>
+3.参与超级车赢家业务流程规划和客户需求分析。<br>
+4.超级车赢家涉及技术点：<br>
+（1）js与原生交互（用于开发图表）。<br>
+（2）牌照识别，早期使用内置识别库进行识别，目前搭建后台服务器识别。<br>
+（3）蓝牙打印小票功能。<br>
+（4）使用环信集成即时通讯功能。<br>
+（5）集成百度地图，实现APP定位签到功能。<br>
+（6）自定义转场。</td>
+  </tr>
+
+  <tr bgcolor="#EEEEEE">
+    <th>车赢家导购</th>
+    <td>2016.06-至今</td>
+  </tr>
+  <tr>
+    <td>项目职务：</td>
+    <td>iOS开发工程师</td>
+  </tr>
+  <tr>
+    <td>项目描述：</td>
+    <td>车杰盟荟购采购平台是为汽车后服务市场定制开发的平台系统。依托于地域现有的品牌和渠道，遵循传统商业本质，同时融合了互联网传播优势。</td>
+  </tr>
+  <tr>
+    <td>项目职责：</td>
+    <td>1.参与项目开发和发布。 <br>
+2.参与荟购的需求分析，业务流程规划 <br> 
+3.荟购涉及技术点：<br>
+（1）购物车的设计与实现<br>
+（2）用环信集成IM通讯功能<br>
+（3）支付宝支付功能。
+  </tr>
+</table>
 
 <h3>自我评价</h3>
 
