--- a/private.html
+++ b/private.html
@@ -130,7 +130,7 @@ header-img: "img/tag-bg.jpg"
 <h3>项目经历</h3>
 <table>
   <tr bgcolor="#EEEEEE">
-    <th>超级车赢家（公司平台级APP）</th>
+    <th width="300">超级车赢家（公司平台级APP）</th>
     <td>2016.03-至今</td>
   </tr>
   <tr>
@@ -157,7 +157,7 @@ header-img: "img/tag-bg.jpg"
   </tr>
 
   <tr bgcolor="#EEEEEE">
-    <th>车赢家导购</th>
+    <th width="300">车赢家导购</th>
     <td>2016.06-至今</td>
   </tr>
   <tr>
