--- a/private.html
+++ b/private.html
@@ -131,10 +131,10 @@ header-img: "img/tag-bg.jpg"
 <table>
   <tr bgcolor="#EEEEEE">
     <th width="300">超级车赢家（公司平台级APP）</th>
-    <td>2016.03-至今</td>
+    <td align="right">2016.03-至今</td>
   </tr>
   <tr>
-    <td>项目职务：</td>
+    <td width="100">项目职务：</td>
     <td>iOS开发工程师</td>
   </tr>
   <tr>
@@ -158,10 +158,10 @@ header-img: "img/tag-bg.jpg"
 
   <tr bgcolor="#EEEEEE">
     <th width="300">车赢家导购</th>
-    <td>2016.06-至今</td>
+    <td align="right">2016.06-至今</td>
   </tr>
   <tr>
-    <td>项目职务：</td>
+    <td width="100">项目职务：</td>
     <td>iOS开发工程师</td>
   </tr>
   <tr>
