--- a/private.html
+++ b/private.html
@@ -130,12 +130,12 @@ header-img: "img/tag-bg.jpg"
 <h3>项目经历</h3>
 <table>
   <tr bgcolor="#EEEEEE">
-    <th width="300">超级车赢家（公司平台级APP）</th>
+    <th width="300" colspan="2">超级车赢家（公司平台级APP）</th>
     <td align="right">2016.03-至今</td>
   </tr>
   <tr>
     <td width="100">项目职务：</td>
-    <td>iOS开发工程师</td>
+    <td colspan="2">iOS开发工程师</td>
   </tr>
   <tr>
     <td>项目描述：</td>
