--- a/private.html
+++ b/private.html
@@ -157,7 +157,7 @@ header-img: "img/tag-bg.jpg"
   </tr>
 
   <tr bgcolor="#EEEEEE">
-    <th width="300" colspan="2">车赢家导购</th>
+    <th width="300">车赢家导购</th>
     <td align="right">2016.06-至今</td>
   </tr>
   <tr>
