--- a/private.html
+++ b/private.html
@@ -130,7 +130,7 @@ header-img: "img/tag-bg.jpg"
 <h3>项目经历</h3>
 <table>
   <tr bgcolor="#EEEEEE">
-    <th width="300" colspan="2">超级车赢家（公司平台级APP）</th>
+    <th width="200" colspan="2">超级车赢家（公司平台级APP）</th>
     <td align="right">2016.03-至今</td>
   </tr>
   <tr>
@@ -139,12 +139,12 @@ header-img: "img/tag-bg.jpg"
   </tr>
   <tr>
     <td>项目描述：</td>
-    <td>超级车赢家是车杰盟研发的，针对门店内部管理运营的系统。<br>
+    <td colspan="2">超级车赢家是车杰盟研发的，针对门店内部管理运营的系统。<br>
 超级车赢家采用模块化设计，各功能灵活配置，终端门店可以根据自身具体情况，匹配相应的店面管理运营解决方案；</td>
   </tr>
   <tr>
     <td>项目职责：</td>
-    <td>1.初期参与项目规划，及可行性研究，需求分析，参与撰写希求文档，原型设计。<br>
+    <td colspan="2">1.初期参与项目规划，及可行性研究，需求分析，参与撰写希求文档，原型设计。<br>
 2.负责项目开发和发布，版本升级迭代与维护。<br>
 3.参与超级车赢家业务流程规划和客户需求分析。<br>
 4.超级车赢家涉及技术点：<br>
@@ -157,20 +157,20 @@ header-img: "img/tag-bg.jpg"
   </tr>
 
   <tr bgcolor="#EEEEEE">
-    <th width="300">车赢家导购</th>
+    <th width="200" colspan="2">车赢家导购</th>
     <td align="right">2016.06-至今</td>
   </tr>
   <tr>
     <td width="100">项目职务：</td>
-    <td>iOS开发工程师</td>
+    <td colspan="2">iOS开发工程师</td>
   </tr>
   <tr>
     <td>项目描述：</td>
-    <td>车杰盟荟购采购平台是为汽车后服务市场定制开发的平台系统。依托于地域现有的品牌和渠道，遵循传统商业本质，同时融合了互联网传播优势。</td>
+    <td colspan="2">车杰盟荟购采购平台是为汽车后服务市场定制开发的平台系统。依托于地域现有的品牌和渠道，遵循传统商业本质，同时融合了互联网传播优势。</td>
   </tr>
   <tr>
     <td>项目职责：</td>
-    <td>1.参与项目开发和发布。 <br>
+    <td colspan="2">1.参与项目开发和发布。 <br>
 2.参与荟购的需求分析，业务流程规划 <br> 
 3.荟购涉及技术点：<br>
 （1）购物车的设计与实现<br>
