--- a/private.html
+++ b/private.html
@@ -130,7 +130,7 @@ header-img: "img/tag-bg.jpg"
 <h3>项目经历</h3>
 <table>
   <tr bgcolor="#EEEEEE">
-    <th width="300" colspan="2">超级车赢家（公司平台级APP）</th>
+    <th colspan="2">超级车赢家（公司平台级APP）</th>
     <td align="right">2016.03-至今</td>
   </tr>
   <tr>
@@ -157,7 +157,7 @@ header-img: "img/tag-bg.jpg"
   </tr>
 
   <tr bgcolor="#EEEEEE">
-    <th width="200" colspan="2">车赢家导购</th>
+    <th colspan="2">车赢家导购</th>
     <td align="right">2016.06-至今</td>
   </tr>
   <tr>
