--- a/private.html
+++ b/private.html
@@ -134,7 +134,7 @@ header-img: "img/tag-bg.jpg"
     <td align="right">2016.03-至今</td>
   </tr>
   <tr>
-    <td width="100">项目职务：</td>
+    <td>项目职务：</td>
     <td colspan="2">iOS开发工程师</td>
   </tr>
   <tr>
