--- a/private.html
+++ b/private.html
@@ -131,7 +131,7 @@ header-img: "img/tag-bg.jpg"
 <table>
   <tr>
     <th colspan="2">超级车赢家（公司平台级APP）</th>
-    <td align="right">2016.03-至今</td>
+    <td width="100" align="right">2016.03-至今</td>
   </tr>
   <tr>
     <td>项目职务：</td>
