--- a/private.html
+++ b/private.html
@@ -129,9 +129,9 @@ header-img: "img/tag-bg.jpg"
 
 <h3>项目经历</h3>
 <table>
-  <tr>
+  <tr bgcolor="#EEEEEE">
     <th colspan="2">超级车赢家（公司平台级APP）</th>
-    <td width="100" align="right">2016.03-至今</td>
+    <td width="150" align="right">2016.03-至今</td>
   </tr>
   <tr>
     <td>项目职务：</td>
@@ -158,6 +158,31 @@ header-img: "img/tag-bg.jpg"
 
   <tr bgcolor="#EEEEEE">
     <th colspan="2">车赢家导购</th>
+    <td align="right">2016.06-至今</td>
+  </tr>
+  <tr>
+    <td width="100">项目职务：</td>
+    <td colspan="2">iOS开发工程师</td>
+  </tr>
+  <tr>
+    <td>项目描述：</td>
+    <td colspan="2">车赢家导购是车杰盟早期研发的免费提供门店使用的移动端汽车服务平台。
+目前只做较小的功能更新，重点内容放入超级车赢家开发。</td>
+  </tr>
+  <tr>
+    <td>项目职责：</td>
+    <td colspan="2">1.参与项目开发和发布。 <br>
+2.新功能开发，版本升级迭代与维护。 <br>
+3.参与车赢家导购业务流程规划和客户需求分析。 <br>
+4.车赢家导购涉及技术点：<br>
+（1）作为工具类APP，最主要的是业务逻辑的处理 <br>
+（2）牌照识别，早期使用内置识别库进行识别，目前采用后台服务器识别。<br> 
+（3）蓝牙打印小票功能。
+  </tr>
+
+  <tr bgcolor="#EEEEEE">
+    <th colspan="2">荟购买家版 </th>
+  </th>
     <td align="right">2016.06-至今</td>
   </tr>
   <tr>
