--- a/private.html
+++ b/private.html
@@ -158,7 +158,7 @@ header-img: "img/tag-bg.jpg"
 
   <tr bgcolor="#EEEEEE">
     <th colspan="2">车赢家导购</th>
-    <td align="right">2016.06-至今</td>
+    <td align="right">2015.06-至今</td>
   </tr>
   <tr>
     <td width="100">项目职务：</td>
@@ -167,7 +167,7 @@ header-img: "img/tag-bg.jpg"
   <tr>
     <td>项目描述：</td>
     <td colspan="2">车赢家导购是车杰盟早期研发的免费提供门店使用的移动端汽车服务平台。
-目前只做较小的功能更新，重点内容放入超级车赢家开发。</td>
+目前只做较小的功能更新。</td>
   </tr>
   <tr>
     <td>项目职责：</td>
@@ -203,11 +203,26 @@ header-img: "img/tag-bg.jpg"
 （3）支付宝支付功能。
   </tr>
 </table>
-
+<br>
+<hr/>
 <h3>自我评价</h3>
+1、本人性格开朗，善于沟通交流，对编程方面的知识抱有极大的兴趣和学习热情，喜欢和同行交流与分享技术； <br>
+2、对iOS开发有浓厚的兴趣，喜欢浏览CocoaChina，CSDN，code4App，开源中国，博客园，Swift中国，swiftgg等技术网站，来提升自己的技术水平； <br>
+3、有多个上线项目的经验，有较强的问题分析和bug调试的能力； <br>
+4、具有较强的抗压能力和学习能力，对待工作认真负责，能够及时的完成公司交给的任务。<br>
+5、<a onmouseover="mOver(this)" onmouseout="mOut(this)" href="fishyan.me" style="color:#4271AE">个人网站：http://fishyan.me<br>
 
+<hr/>
 <h3>附加信息</h3>
-
+1、计算机语言：C、Objective-C、Swift等，可熟练运用Objective-C、Swift进行iOS编程；了解C#，XMAL，HTML，JavaScript <br>
+2、熟悉iOS平台的内存管理机制，熟悉内存优化；<br>
+3、具有良好的面向对象编程思想，熟练运用多态、继承、封装，提高内聚，降低耦合，提高代码质量；<br>
+4、熟练运用MVC、MVVM等设计思想来搭建框架，善于使用模块化设计，使结构层次清晰易于维护；<br>
+5、熟练运用Storyboard搭建应用界面，能熟练的解决约束冲突，屏幕适配的问题；<br>
+6、熟练运用CocoaPods第三方类库管理工具来导入第三方，项目中使用过大部分常用第三方，具备快速上手第三方SDK使用的能力<br>
+7、熟练运用NSThread、GCD、NSOperationQueue多线程技术进行编程以提高内存利用率和程序流畅度；<br>
+8、熟练App开发到上架的整个流程，熟悉程序上传的步骤，以及版本的升级迭代；<br>
+9、熟练运用SVN进行团队开发，解决冲突。熟练运用git命令，个人项目是用git仓库管理项目，熟练使用git终端命令，SourceTree，GithubDesktop。 <br>
 		</div>
 	</div>
 </div>
