--- a/private.html
+++ b/private.html
@@ -215,7 +215,7 @@ header-img: "img/tag-bg.jpg"
 2、对iOS开发有浓厚的兴趣，喜欢浏览CocoaChina，CSDN，code4App，开源中国，博客园，Swift中国，swiftgg等技术网站，来提升自己的技术水平； <br>
 3、有多个上线项目的经验，有较强的问题分析和bug调试的能力； <br>
 4、具有较强的抗压能力和学习能力，对待工作认真负责，能够及时的完成公司交给的任务。<br>
-5、<a onmouseover="mOver(this)" onmouseout="mOut(this)" href="fishyan.me" style="color:#4271AE">个人网站：http://fishyan.me<br>
+5、<a onmouseover="mOver(this)" onmouseout="mOut(this)" href="fishyan.me" style="color:#4271AE">个人网站：http://fishyan.me</a><br>
 
 <hr/>
 <h3>附加信息</h3>
