--- a/private.html
+++ b/private.html
@@ -110,7 +110,7 @@ header-img: "img/tag-bg.jpg"
    </tr>
    <tr bgcolor="#EEEEEE">
      <th>iOS开发工程师</th>
-     <td align="right">2015.08-至今</td>
+     <td align="right">2014.10-2015.05</td>
    </tr>
    <tr>
      <td>职责业绩：</td>
