--- a/resume.html
+++ b/resume.html
@@ -218,7 +218,7 @@ header-img: "img/tag-bg.jpg"
 5、<a onmouseover="mOver(this)" onmouseout="mOut(this)" href="{{ site.baseurl }}/" style="color:#4271AE">个人网站：http://fishyan.me</a><br>
 
 <hr/>
-<h3>附加信息</h3>
+<h3>个人技能</h3>
 1、计算机语言：C、Objective-C、Swift等，可熟练运用Objective-C、Swift进行iOS编程；了解C#，XMAL，HTML，JavaScript <br>
 2、熟悉iOS平台的内存管理机制，熟悉内存优化；<br>
 3、具有良好的面向对象编程思想，熟练运用多态、继承、封装，提高内聚，降低耦合，提高代码质量；<br>
