--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@ header-img: "img/tag-bg.jpg"
 </tr>   
 <tr>
   <th>手机：</th>
-  <td >13627275116</td>
+  <td><a href="tel:13627275116">13627275116</a></td>
   <th>所在地点：</th>
   <td>武汉市-硚口区</td>
 </tr>
