--- a/resume.html
+++ b/resume.html
@@ -222,12 +222,15 @@ header-img: "img/tag-bg.jpg"
 1、计算机语言：C、Objective-C、Swift等，可熟练运用Objective-C、Swift进行iOS编程；了解C#，XMAL，HTML，JavaScript <br>
 2、熟悉iOS平台的内存管理机制，熟悉内存优化；<br>
 3、具有良好的面向对象编程思想，熟练运用多态、继承、封装，提高内聚，降低耦合，提高代码质量；<br>
-4、熟练运用MVC、MVVM等设计思想来搭建框架，善于使用模块化设计，使结构层次清晰易于维护；<br>
-5、熟练运用Storyboard搭建应用界面，能熟练的解决约束冲突，屏幕适配的问题；<br>
-6、熟练运用CocoaPods第三方类库管理工具来导入第三方，项目中使用过大部分常用第三方，具备快速上手第三方SDK使用的能力<br>
-7、熟练运用NSThread、GCD、NSOperationQueue多线程技术进行编程以提高内存利用率和程序流畅度；<br>
-8、熟练App开发到上架的整个流程，熟悉程序上传的步骤，以及版本的升级迭代；<br>
-9、熟练运用SVN进行团队开发，解决冲突。熟练运用git命令，个人项目是用git仓库管理项目，熟练使用git终端命令，SourceTree，GithubDesktop。 <br>
+4、具有良好的代码习惯，善于优化代码，对项目中产生的问题有较强的查找原因、解决问题的能力；
+5、熟练运用MVC、MVVM等设计思想来搭建框架，善于使用模块化设计，使结构层次清晰易于维护；<br>
+6、熟练运用Storyboard搭建应用界面，能熟练的解决约束冲突，屏幕适配的问题；<br>
+7、熟练运用CocoaPods第三方类库管理工具来导入第三方，项目中使用过大部分常用第三方，具备快速上手第三方SDK使用的能力<br>
+8、熟练运用NSThread、GCD、NSOperationQueue多线程技术进行编程以提高内存利用率和程序流畅度；<br>
+9、熟练App开发到上架的整个流程，熟悉程序上传的步骤，以及版本的升级迭代；<br>
+10、熟练运用SVN进行团队开发，解决冲突。熟练运用git命令，个人项目是用git仓库管理项目，熟练使用git终端命令，SourceTree，GithubDesktop；<br>
+11、个人对 iOS 动画，控制器转场做有比较深入的研究；
+12、对产品业务逻辑的理解速度较快，具备较快的上手产品的能力。
 		</div>
 	</div>
 </div>
