--- a/resume.html
+++ b/resume.html
@@ -229,8 +229,8 @@ header-img: "img/tag-bg.jpg"
 8、熟练运用NSThread、GCD、NSOperationQueue多线程技术进行编程以提高内存利用率和程序流畅度；<br>
 9、熟练App开发到上架的整个流程，熟悉程序上传的步骤，以及版本的升级迭代；<br>
 10、熟练运用SVN进行团队开发，解决冲突。熟练运用git命令，个人项目是用git仓库管理项目，熟练使用git终端命令，SourceTree，GithubDesktop；<br>
-11、个人对 iOS 动画，控制器转场做有比较深入的研究；
-12、对产品业务逻辑的理解速度较快，具备较快的上手产品的能力。
+11、个人对 iOS 动画，控制器转场做有比较深入的研究；<br>
+12、对产品业务逻辑的理解速度较快，具备较快的上手产品的能力。<br>
 		</div>
 	</div>
 </div>
