--- a/resume.html
+++ b/resume.html
@@ -155,10 +155,13 @@ header-img: "img/tag-bg.jpg"
 4.超级车赢家涉及技术点：<br>
 （1）js与原生交互（用于开发图表）。<br>
 （2）牌照识别，早期使用内置识别库进行识别，目前搭建后台服务器识别。<br>
-（3）蓝牙打印小票功能。<br>
-（4）使用环信集成即时通讯功能。<br>
-（5）集成百度地图，实现APP定位签到功能。<br>
-（6）自定义转场。</td>
+（3）照片拍摄，上传，获取系统相册。<br>
+（4）蓝牙打印小票功能。<br>
+（5）使用环信集成即时通讯功能。<br>
+（6）使用LeanCloud推送<br>
+（7）集成百度地图，实现APP定位签到功能。<br>
+（8）自定义转场。
+</td>
   </tr>
 
   <tr bgcolor="#EEEEEE">
@@ -182,7 +185,9 @@ header-img: "img/tag-bg.jpg"
 4.车赢家导购涉及技术点：<br>
 （1）作为工具类APP，最主要的是业务逻辑的处理 <br>
 （2）牌照识别，早期使用内置识别库进行识别，目前采用后台服务器识别。<br> 
-（3）蓝牙打印小票功能。
+（3）照片拍摄，上传，获取系统相册。<br>
+（4）蓝牙打印小票功能。
+（5）使用LeanCloud推送
   </tr>
 
   <tr bgcolor="#EEEEEE">
