--- a/resume.html
+++ b/resume.html
@@ -186,7 +186,7 @@ header-img: "img/tag-bg.jpg"
 （1）作为工具类APP，最主要的是业务逻辑的处理 <br>
 （2）牌照识别，早期使用内置识别库进行识别，目前采用后台服务器识别。<br> 
 （3）照片拍摄，上传，获取系统相册。<br>
-（4）蓝牙打印小票功能。
+（4）蓝牙打印小票功能。<br>
 （5）使用LeanCloud推送
   </tr>
 
