--- a/about.html
+++ b/about.html
@@ -19,8 +19,39 @@ header-img: "img/about-bg.jpg"
         <a> —— 马云</a>
     </p>
     </blockquote>
-    我是FishYan，致力于 iOS 开发，深度极客，喜好研究各种神奇的东西，比如本站。
-
+    <p style="font-size: 30">
+        嗨，我是薛焱，博客名fishyan
+    </p>
+    <p style="font-size: 20">
+        是职业 iOS 开发者
+    </p>
+    <p style="font-size: 10">
+        目前就职于<a href="http://www.cjm168.com/" style="color:#4271AE">重庆车杰盟科技有限公司（CPAU）</a>
+    </p>
+    <p style="font-size: 15">
+        是公司核心APP<a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE">《超级车赢家》</a>的项目负责人
+    </p>
+    <p style="font-size: 25">
+        编程的魅力总是让我欲罢不能
+    </p>
+    <p style="font-size: 10">
+        生活在魅力江城——武汉
+    </p>
+    <p style="font-size: 20">
+        喜爱运动
+    </p>
+    <p style="font-size: 15">
+        周末聚会
+    </p>
+    <p style="font-size: 10">
+        或是
+    </p>
+    <p style="font-size: 15">
+        看一部电影
+    </p>
+    <p style="font-size: 10">
+        都是不错的选择
+    </p>
 </div>
 
 <!-- English Version -->
