--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ header-img: "img/about-bg.jpg"
         <a> —— 马云</a>
     </p>
     </blockquote>
-    <p style="font-size: 30; text-align: center;">
+    <p style="font-size: 30px; text-align: center;">
         嗨，我是薛焱，博客名fishyan
     </p>
     <p style="font-size: 20">
