--- a/resume.html
+++ b/resume.html
@@ -125,13 +125,14 @@ header-img: "img/tag-bg.jpg"
  </table>
 
 <h3>教育经历</h3>
-<table>
+<table border="0px">
   <tr>
     <td>河南工业大学（ 2011.09 - 2015.06 ）</td>
     <td>本科</td>
   </tr>
 </table>
 
+<hr>
 <h3>项目经历</h3>
 <table>
   <tr bgcolor="#EEEEEE">
@@ -213,8 +214,7 @@ header-img: "img/tag-bg.jpg"
 （3）支付宝支付功能。
   </tr>
 </table>
-<br>
-<hr/>
+
 <h3>自我评价</h3>
 1、本人性格开朗，善于沟通交流，对编程方面的知识抱有极大的兴趣和学习热情，喜欢和同行交流与分享技术； <br>
 2、对iOS开发有浓厚的兴趣，喜欢浏览CocoaChina，CSDN，code4App，开源中国，博客园，Swift中国，swiftgg等技术网站，来提升自己的技术水平； <br>
