--- a/about.html
+++ b/about.html
@@ -26,16 +26,16 @@ header-img: "img/about-bg.jpg"
         是一名职业 iOS 开发者
     </p>
     <p style="font-size: 20px; text-align: center;">
-        目前就职于<a href="http://www.cjm168.com/" style="color:#4271AE">重庆车杰盟科技有限公司（CPAU）</a>
+        目前就职于<a href="http://www.cjm168.com/" style="color:#4271AE; font-size: 30px;">重庆车杰盟科技有限公司（CPAU）</a>
     </p>
-    <p style="font-size: 30px; text-align: center;">
-        是公司核心APP<a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE">《超级车赢家》</a>的项目负责人
+    <p style="font-size: 20px; text-align: center;">
+        是公司核心APP<a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE; font-size: 30px;">《超级车赢家》</a>的项目负责人
     </p>
     <p style="font-size: 20px; text-align: center;">
         编程的魅力总是让我欲罢不能
     </p>
     <p style="font-size: 20px; text-align: center;">
-        生活在魅力江城——武汉
+        生活在魅力江城——<a style="font-size: 25">武汉</a>
     </p>
     <p style="font-size: 20px; text-align: center;">
         喜爱运动
