--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ header-img: "img/about-bg.jpg"
         编程的魅力总是让我欲罢不能
     </p>
     <p style="font-size: 20px; text-align: center;">
-        生活在魅力江城——<a style="font-size: 25">武汉</a>
+        生活在魅力江城——<a style="font-size: 25; text-decoration: blink;">武汉</a>
     </p>
     <p style="font-size: 20px; text-align: center;">
         喜爱运动
