--- a/about.html
+++ b/about.html
@@ -12,6 +12,14 @@ header-img: "img/about-bg.jpg"
 </select>
 -->
 <!-- Chinese Version -->
+<style>
+    .origin{
+        color: #FD9827;
+        font-size: 25;
+        text-decoration: blink;
+    }
+</style>
+
 <div class="zh post-container">
     <blockquote>
         世界上很多事不是你能做什么，而是你该做什么。
@@ -25,11 +33,20 @@ header-img: "img/about-bg.jpg"
     <p style="font-size: 25px; text-align: center;">
         是一名职业 iOS 开发者
     </p>
-    <p style="font-size: 20px; text-align: center;">
+    <p style="font-size: 15px; text-align: center;">
         目前就职于<a href="http://www.cjm168.com/" style="color:#4271AE; font-size: 30px;">重庆车杰盟科技有限公司（CPAU）</a>
     </p>
-    <p style="font-size: 20px; text-align: center;">
+    <p style="font-size: 15px; text-align: center;">
         是公司核心APP<a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE; font-size: 30px;">《超级车赢家》</a>的项目负责人
+    </p>
+    <p style="font-size: 25px; text-align: center;">
+        酷爱编程
+    </p>
+    <p style="font-size: 15px; text-align: center;">
+        目前使用的主要语言是<a style="font-size: 25; text-decoration: blink;">Objective-C</a>和<a style="font-size: 25; text-decoration: blink;">Swift</a>
+    </p>
+    <p style="font-size: 15px; text-align: center;">
+        正在学习<a class="origin">HTML</a>、<a class="origin">JavaScript</a>、<a class="origin">C#</a>和<a class="origin">XMAL</a>
     </p>
     <p style="font-size: 20px; text-align: center;">
         编程的魅力总是让我欲罢不能
