--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ header-img: "img/about-bg.jpg"
 <style>
     .origin{
         color: #FD9827;
-        font-size: 25;
+        font-size: 25px;
         text-decoration: blink;
     }
 </style>
@@ -43,7 +43,10 @@ header-img: "img/about-bg.jpg"
         酷爱编程
     </p>
     <p style="font-size: 15px; text-align: center;">
-        目前使用的主要语言是<a style="font-size: 25; text-decoration: blink;">Objective-C</a>和<a style="font-size: 25; text-decoration: blink;">Swift</a>
+        目前使用的主要语言是<a class="origin">Objective-C</a>和<a class="origin">Swift</a>
+    </p>
+    <p style="font-size: 15px; text-align: center;">
+        熟练开发各类iOS平台APP
     </p>
     <p style="font-size: 15px; text-align: center;">
         正在学习<a class="origin">HTML</a>、<a class="origin">JavaScript</a>、<a class="origin">C#</a>和<a class="origin">XMAL</a>
