--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,9 @@
+---
+layout: page
+title: "关于"
+description: "I am FishYan, Just Do Myself"
+header-img: "img/about-bg.jpg"
+---
 <!doctype html>
 
 <html lang="en">
