--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
 
     <link href="css/aboutme.css" rel="stylesheet" />
     
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="/img/favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <base target="_blank">
 </head>
@@ -125,7 +125,7 @@
 
     <div id="back" class="step" data-x="-6000" data-y="5200" data-scale="2">
         <p>我一直都在</p><br>
-        <p>点击<a href="http://fishyan.me">这里</a>返回FishYan</p>
+        <p>点击<a target="_self" href="http://fishyan.me">这里</a>返回FishYan</p>
     </div>
 
     <div id="overview" class="step" data-x="0" data-y="2500" data-scale="16">
