--- a/aboutme.html
+++ b/aboutme.html
@@ -48,9 +48,9 @@
         <p><span class="born"><a href="http://www.cjm168.com/">重庆车杰盟科技有限公司（CPAU）</a></span></p>
         <p>负责项目：</p>
         <p><span class="study"><a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE; font-size: 30px;">《超级车赢家》</a></span></p>
-        <p><span class="study"><a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE; font-size: 30px;">《超级车赢家》</a></span></p>
-        <p><span class="study"><a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE; font-size: 30px;">《超级车赢家》</a></span></p>
-        <p><span class="study"><a href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" style="color:#4271AE; font-size: 30px;">《超级车赢家》</a></span></p>
+        <p><span class="study"><a href="https://itunes.apple.com/cn/app/车赢家导购/id1025652457?mt=8" style="color:#4271AE; font-size: 30px;">《车赢家导购》</a></span></p>
+        <p><span class="study"><a href="https://itunes.apple.com/cn/app/车杰盟移动互联/id1138275784?mt=8" style="color:#4271AE; font-size: 30px;">《车杰盟移动互联》</a></span></p>
+        <p><span class="study"><a href="https://itunes.apple.com/cn/app/荟购买家版/id1154383448?mt=8" style="color:#4271AE; font-size: 30px;">《荟购买家版》</a></span></p>
     </div>
 
      <div id="japan" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="4">
