--- a/myresume/resume.html
+++ b/myresume/resume.html
@@ -7,9 +7,9 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Intima - Clean &amp; Responsive Resume Template</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<title>FishYan | 个人简历</title>
+	<meta name="description" content="薛焱的个人简历">
+	<meta name="author" content="FishYan">
 
    <!-- Mobile Specific Metas
    ================================================== -->
@@ -31,7 +31,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.png" >
+	<link rel="shortcut icon" href="images/favicon.png" >
 
 </head>
 
