--- a/myresume/resume.html
+++ b/myresume/resume.html
@@ -31,7 +31,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.png" >
+	<link rel="shortcut icon" href="favicon.png" >
 
 </head>
 
