--- a/resume.html
+++ b/resume.html
@@ -144,7 +144,7 @@
    <!-- Resume Section
    ================================================== -->
    <section id="resume">
-    <h1 class="section-title wow fadeInDown">简历</h1>
+    <h1 class="section-title wow fadeInDown">个人简历</h1>
       <!-- Education
       =============================================== -->
       <div class="row education">
@@ -354,7 +354,7 @@
 
          <div class="twelve columns collapsed">
 
-            <h1 class="section-title wow fadeInDown">我的部分项目</h1>
+            <h1 class="section-title wow fadeInDown">部分项目</h1>
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf wow fadeIn">
@@ -582,7 +582,7 @@
 
       <div class="row section-head">
           <div class="twelve columns">
-              <h1 class="section-title wow fadeInDown">我的联系方式</h1>
+              <h1 class="section-title wow fadeInDown">联系方式</h1>
               <p class="lead">如果您纵览了我的简历，认为能够胜任这份工作，那么下面是我的联系方式，可以通过任何一个途径联系到我，我期待你的联系。</p>
           </div>
       </div> <!-- Section head --> 
