--- a/resume.html
+++ b/resume.html
@@ -363,7 +363,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="超级车赢家">
-                        <img alt="" src="images/ydgzz.png">
+                        <img alt="" src="myresume/images/ydgzz.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>超级车赢家</h5>
@@ -379,7 +379,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="车赢家导购">
-                        <img alt="" src="images/cyjdg.png">
+                        <img alt="" src="myresume/images/cyjdg.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>车赢家导购</h5>
@@ -395,7 +395,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="荟购买家版">
-                        <img alt="" src="images/hg.png">
+                        <img alt="" src="myresume/images/hg.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>荟购买家版</h5>
@@ -411,7 +411,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="车杰盟移动互联">
-                        <img alt="" src="images/oa.png">
+                        <img alt="" src="myresume/images/oa.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>车杰盟移动互联</h5>
@@ -433,7 +433,7 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
           <center>
-		      <img class="scale-with-grid" width="100" src="images/ydgzz.png" alt="" />
+		      <img class="scale-with-grid" width="100" src="myresume/images/ydgzz.png" alt="" />
           </center>
 		      <div class="description-box">
 			      <h3 align="center">超级车赢家</h3>
@@ -465,7 +465,7 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
           <center>
-		      <img class="scale-with-grid" src="images/cyjdg.png" alt="" />
+		      <img class="scale-with-grid" src="myresume/images/cyjdg.png" alt="" />
           </center>
 		      <div class="description-box">
 			      <h3 aling="center">车赢家导购</h3>
@@ -493,7 +493,7 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
           <center>
-		      <img class="scale-with-grid" src="images/hg.png" alt="" />
+		      <img class="scale-with-grid" src="myresume/images/hg.png" alt="" />
           </center>
 		      <div class="description-box">
             <h3 align="center">荟购买家版</h3>
@@ -518,7 +518,7 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
           <center>
-		      <img class="scale-with-grid" src="images/oa.png" alt="" />
+		      <img class="scale-with-grid" src="myresume/images/oa.png" alt="" />
           </center>
 		      <div class="description-box">
 			      <h3 align="center">车杰盟移动互联</h3>
