--- a/resume.html
+++ b/resume.html
@@ -106,7 +106,7 @@
          <div class="six columns bio-left"> 
          <div class="pp-container">
 
-            <img class="profile-pic wow zoomIn"  src="images/myself.jpg" alt="" />
+            <img class="profile-pic wow zoomIn"  src="myresume/images/myself.jpg" alt="" />
               <h2>薛 焱</h2>
               <h3>iOS开发工程师</h3>              
             </div> <!-- Profile Picture -->
@@ -465,7 +465,7 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
           <center>
-		      <img class="scale-with-grid" src="myresume/images/cyjdg.png" alt="" />
+		      <img class="scale-with-grid" src="myresume/images/cyjdg.png" width="100" alt="" />
           </center>
 		      <div class="description-box">
 			      <h3 aling="center">车赢家导购</h3>
@@ -493,7 +493,7 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
           <center>
-		      <img class="scale-with-grid" src="myresume/images/hg.png" alt="" />
+		      <img class="scale-with-grid" src="myresume/images/hg.png" width="100" alt="" />
           </center>
 		      <div class="description-box">
             <h3 align="center">荟购买家版</h3>
@@ -518,7 +518,7 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
           <center>
-		      <img class="scale-with-grid" src="myresume/images/oa.png" alt="" />
+		      <img class="scale-with-grid" src="myresume/images/oa.png" width="100" alt="" />
           </center>
 		      <div class="description-box">
 			      <h3 align="center">车杰盟移动互联</h3>
@@ -597,21 +597,21 @@
 
                         <div>
                           <p>
-                            联系电话：<a href="tel:13627275116">13627275116</a>
+                            <img src="myresume/images/phone.png" width="15px" height="15px"> 联系电话：<a href="tel:13627275116">13627275116</a>
                           </p>
       						   <!--<input type="text" placeholder="Name" value="" size="35" id="contactName" name="contactName">-->
                         </div>
 
                         <div>
                           <p>
-                            邮箱：<a href="mailto:xueyan_2011@163.com">xueyan_2011@163.com</a>
+                            <img src="myresume/images/mail.png" width="15px" height="15px"> 邮箱：<a href="mailto:xueyan_2011@163.com">xueyan_2011@163.com</a>
                           </p>
       						   <!--<input type="text" placeholder="Email" value="" size="35" id="contactEmail" name="contactEmail">-->
                         </div>
 
                         <div>
                           <p>
-                            位置：武汉市硚口区云鹤小区精品园
+                            <img src="myresume/images/location.png" width="15px" height="15px"> 位置：武汉市硚口区云鹤小区精品园
                           </p>
       						   <!--<input type="text" placeholder="Subject" value="" size="35" id="contactSubject" name="contactSubject">-->
                         </div>
